@@ -1,5 +1,11 @@
 
 #include "esd-server.h"
+#ifdef HAVE_SYS_IOCTL_H
+# include <sys/ioctl.h>
+#endif
+#ifdef HAVE_SYS_FILIO_H
+# include <sys/filio.h>
+#endif
 
 /*******************************************************************/
 /* globals */
